modificado para testes, adicionado paragrafo

--- a/teste2.html
+++ b/teste2.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Teste2</h1>
+    <p>Isso ta aqui pra ter algo msm</p>
     <a href="teste.html">Voltar</a>
 </body>
 </html>
