--- a/teste.html
+++ b/teste.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Home</h1>
+    <p>home é usado para um teste na utilização do git e github</p>
     <a href="teste2.html">Ir</a>
 </body>
 </html>
