--- a/teste3.html
+++ b/teste3.html
@@ -10,5 +10,6 @@
     <p>Isso ta aqui pra ter algo msm</p>
     <a href="teste.html">Voltar</a>
     <a href="teste2.html">Vai pro 2</a>
+    <h2>WAKAWAKA</h2>
 </body>
 </html>
