--- a/teste.html
+++ b/teste.html
@@ -6,7 +6,7 @@
     <title>Teste</title>
 </head>
 <body>
-    <h1>Home</h1>
+    <h1>Home 1</h1>
     <p>home é usado para um teste na utilização do git e github</p>
     <a href="teste2.html">Ir</a>
 </body>
