--- a/beste1.html
+++ b/beste1.html
@@ -6,11 +6,11 @@
     <title>Teste2</title>
 </head>
 <body>
-    <h1>Teste 3</h1>
-    <p>Isso ta aqui pra ter algo msm</p>
+    <h1>Beste 1</h1>
+    <p>testando os deletes</p>
     <a href="teste.html">Voltar</a>
     <a href="teste2.html">Vai pro 2</a>
-    <a href="beste1.html">vai pro beste1</a>
+    <a href="teste3.html">vai pro 3</a>
     <h2>WAKAWAKA</h2>
 </body>
 </html>
