--- a/teste2.html
+++ b/teste2.html
@@ -10,5 +10,6 @@
     <p>Isso ta aqui pra ter algo msm</p>
     <a href="teste.html">Voltar</a>
     <a href="teste3.html">Vai pro 3</a>
+    <a href="beste1.html">vai pro beste1</a>
 </body>
 </html>
