--- a/beste1.html
+++ b/beste1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Beste 1</h1>
-    <p>testando os erros</p>
+    <p>testando os erros de pull e push</p>
     <a href="teste.html">Voltar</a>
     <a href="teste2.html">Vai pro 2</a>
     <a href="teste3.html">vai pro 3</a>
